# breakoutGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ball.cpp  breakout.cpp  brick.cpp  brick.h  main.cpp  paddle.cpp  paddle.h  profile.env
.github/workflows/: cmake.yml  macos.yml  ubuntu.yml  windows.yml
include/: CMakeLists.txt  ball.h  breakout.h
res/: breakout.qrc
src/: CMakeLists.txt  ball.cpp  breakout.cpp  brick.cpp  main.cpp  paddle.cpp
test/: CMakeLists.txt  conanfile.txt  tests.cpp
tests/: tests.cpp
